--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ footer:
 author: 'Simon.J.R'
 nickname: 'Simon'
 bio: 'thanks to the light you shower around me.'
-avatar: '/assets/img/profile.png'
+avatar: '/assets/img/profile.jpg'
 
 # Search
 search: true
