--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings 配置站点
-title: 'Samaritan Manasseh - Simon&#180;s Blog'
+title: 'Samaritan Manasseh - Simon Blog'
 description: 'thanks to the light you shower around me.'
 keyword: 'Simon,Philosophy,Books,Read,Develop,Music,Photography,Design'
 url: 'https://rsp.ink' # your host
